# BOBE

./: .gitignore  .readthedocs.yaml  BOBE_Current.ipynb  BOBEv2.ipynb  CHANGELOG.md  DOCUMENTATION_SETUP.md  Dynesty.ipynb  GETDIST_FORMAT_VERIFICATION.md  GPUtils.py  INTEGRATION_GUIDE.md  JaxACQ.py  JaxNS.py  LCDM_6D.yaml  LICENSE  MCMCFunctions.py  MIGRATION_GUIDE.md  PLOTTING_README.md  PLOT_CHANGES_SUMMARY.md  README.md  SIMPLIFIED_RESULTS.md  STORAGE_IMPROVEMENTS_SUMMARY.md  TIMING_CHANGES_SUMMARY.md  TIMING_README.md  TestLikelihoods.py  Testing.ipynb  acquisition.py  acquisition_optimization_benchmark_results.csv  banana_test.paramnames  banana_test.ranges  banana_test_intermediate.json  banana_test_results.pkl  banana_test_stats.json  bo.py  bo_be.py  bo_profile.py  bo_utils.py  cosmo.npz  debug_extraction.py  debug_gp_save.py  default.yaml  (+37 more)
.github/: copilot-instructions.md
.github/workflows/: docs.yml  tests.yml
.ipynb_checkpoints/: BOBE-checkpoint.ipynb  BOBEKatana-checkpoint.py  BOBE_Current-checkpoint.ipynb  GPUtils-checkpoint.py  IntegratorFunctions-checkpoint.py  JaxACQ-checkpoint.py  JaxFBGP-checkpoint.py  JaxNS-checkpoint.py  README-checkpoint.md  bo_be-checkpoint.py  default-checkpoint.yaml  ext_loglike-checkpoint.py
BOBE/: __init__.py  acquisition.py  bo.py  clf.py  clf_gp.py  gp.py  likelihood.py  optim.py  pool.py  samplers.py
BOBE/utils/: __init__.py  core.py  (+3 more)
Examples/: batch_posterior.ipynb
docs/: README.md  index.html  jaxbo.html  search.js
examples/: Banana.py  Banana_2D.ipynb  Banana_EI.py  Banana_full_results_plots.py  Banana_mpi_test.py  Cobaya_MPI_test.py  Example Notebook.ipynb  GaussianRing.py  Gaussian_1D.ipynb  Gaussian_4D.ipynb  Gaussian_Ring.ipynb  Himmelblau.py  Himmelblau_full_results_plots.py  Planck_Camspec.py  Planck_Camspec_CPL.py  Planck_Camspec_CPL_EI.py  Planck_Camspec_CPL_clf.py  Planck_Camspec_CPL_clf_enhanced.py  Planck_Camspec_CPL_pNUts.py  Planck_Camspec_EI.py  Planck_Camspec_LCDM_bo.py  Planck_Camspec_LogEI_test.py  Planck_Camspec_Omk.py  Planck_Camspec_Omk_plot.py  Planck_Camspec_WIPV.py  Planck_Camspec_ellipsoid.py  Planck_Camspec_gpfit_tests.py  Planck_Camspec_mpi.py  Planck_Camspec_nn.py  Planck_Camspec_noise_test.py  Planck_Camspec_tests.py  Planck_Camspec_threshold_test.py  Planck_Camspec_timing_results_test.py  Planck_DESI_LCDM.py  Planck_DESI_Omk.py  Planck_DESI_Omk_LCDM.py  Planck_DESI_Omk_Mpi.py  Planck_DESI_Omk_PPlus_threshold_test.py  Planck_DESI_Omk_timing_results_test.py  Planck_DESI_PPlus_CPL_Omk.py  (+62 more)
jaxbo/: SETTINGS_README.md  __init__.py  acquisition.py  bo.py  bo_utils.py  classifiers.py  clf.py  clf_gp.py  fb_gp.py  gp.py  likelihood.py  logging_utils.py  loglike.py  mpi.py  nested_sampler.py  optim.py  plot_utils.py  results.py  run.py  sampler.py  samplers.py  seed_utils.py  settings.py  summary_plots.py  svm_gp.py  timing.py  utils.py
test_methods/: faster_cholesky.py
tests/: test_acquisition.py  test_bo_2d.py  test_clf_gp.py  test_gp.py  test_likelihood.py  test_mpi.py  test_pool.py
(+86 files in other folders)
