[build-system]
requires = [
    "setuptools>=61.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "BOBE"
version = "0.1.0"
description = "A Bayesian Optimization package for cosmology using JAX"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = "MIT"
authors = [
    {name = "Ameek Malhotra", email = "ameekmalhotra@gmail.com"},
    {name = "Nathan Cohen", email = "nathan.cohen@unsw.edu.au"},
    {name = "Jan Hamann", email = "jan.hamann@unsw.edu.au"},  
]
dependencies = [
    "jax>=0.4.20,<=0.6.2",
    "jaxlib>=0.4.20,<=0.6.2",
    "numpy>=1.24.0",
    "numpyro>=0.12.0",
    "scipy>=1.9.0",
    "getdist>=1.3.0",
    "tqdm>=4.60.0",
    "dynesty>=1.2.0",
    "scikit-learn>=1.0.0",
    "tensorflow-probability>=0.20.0",
    "matplotlib>=3.5.0"
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/Ameek94/BOBE"
Documentation = "https://BOBE.readthedocs.io"
Repository = "https://github.com/Ameek94/BOBE"
"Bug Tracker" = "https://github.com/Ameek94/BOBE/issues"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "isort",
    "flake8",
    "mypy",
    "pre-commit"
]
docs = [
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0", 
    "sphinx-autodoc-typehints>=1.12.0",
    "myst-parser>=0.18.0",
    "nbsphinx>=0.8.0"
]
mpi = [
    "mpi4py>=3.1.0"
]
nn = [
    "flax>=0.6.0",
    "optax>=0.1.0"
]
cobaya = [
    "cobaya>=3.0.0"
]
all = [
    "mpi4py>=3.1.0",
    "flax>=0.6.0",
    "optax>=0.1.0",
    "cobaya>=3.0.0"
]

[tool.setuptools]
packages = ["BOBE"]
